kube_manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kvstore-deployment
  labels:
    app: kvstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kvstore
  template:
    metadata:
      labels:
        app: kvstore
    spec:
      containers:
      - name: kvstore
        image: ttl.sh/kvstore:20h
        ports:
        - containerPort: 8010
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
