kube_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvstore-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Replace with your Ingress controller class
spec:
  rules:
  - host: kvstore.io # Replace with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kvstore
            port:
              number: 8010
